<resources>
    <string name="app_name">Lab5</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="test">test</string>
    <string name="title_activity_add_preson">AddPreson</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="_0">0</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string-array name="Genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>